--- a/shop/src/main/resources/templates/cart/cartList.html
+++ b/shop/src/main/resources/templates/cart/cartList.html
@@ -114,6 +114,13 @@
 
         function orders() {
 
+            var checkedItems = $("input[name=cartChkBox]:checked");
+            if (checkedItems.length === 0) {
+                // 체크된 상품이 없는 경우 알림 창 띄우기
+                alert("주문할 상품을 선택해주세요.");
+                return;
+            }
+
             var token = $("meta[name='_csrf']").attr("content");
             var header = $("meta[name='_csrf_header']").attr("content");
 
@@ -223,13 +230,16 @@
                     <input type="checkbox" name="cartChkBox" th:value="${cartItem.cartItemId}">
                 </td>
                 <td class="d-flex">
-<!--                    <a th:href="'/item/' +${cartItem.cartItemId}" class="text-dark">-->
-                        <div class="repImgDiv align-self-center">
+                    <div class="repImgDiv align-self-center">
+                        <a th:href="'/item/' +${cartItem.itemId}" class="text-dark">
                             <img th:src="${cartItem.imgUrl}" class="rounded repImg" th:alt="${cartItem.itemNm}">
-                        </div>
-                        <div class=" align-self-center">
+                        </a>
+                    </div>
+                    <div class=" align-self-center">
+                        <a th:href="'/item/' +${cartItem.itemId}" class="text-dark">
                             <span th:text="${cartItem.itemNm}" class="fs24 font-weight-bold"></span>
-                            <div class="fs18 font-weight-light">
+                        </a>
+                        <div class="fs18 font-weight-light">
                             <span class="input-group mt-2">
                                 <span th:id="'price_'+${cartItem.cartItemId}" th:data-price="${cartItem.price}"
                                       th:text="${cartItem.price}+'원'" class="align-self-center mr-2"></span>
@@ -241,9 +251,8 @@
                                           onclick="deleteCartItem(this)">&times;</span>
                                 </button>
                             </span>
-                            </div>
                         </div>
-<!--                    </a>-->
+                    </div>
                 </td>
                 <td class="text-center align-middle">
                     <span th:id="'totalPrice_'+${cartItem.cartItemId}" name="totalPrice"
