--- a/shop/src/main/resources/templates/order/orderHist.html
+++ b/shop/src/main/resources/templates/order/orderHist.html
@@ -20,31 +20,31 @@
 
             var url = "/order/" + orderId + "/cancel";
             var paramData = {
-                orderId : orderId,
+                orderId: orderId,
             };
 
             var param = JSON.stringify(paramData);
 
             $.ajax({
-                url      : url,
-                type     : "POST",
-                contentType : "application/json",
-                data     : param,
-                beforeSend : function(xhr){
+                url: url,
+                type: "POST",
+                contentType: "application/json",
+                data: param,
+                beforeSend: function (xhr) {
                     /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
                     xhr.setRequestHeader(header, token);
                 },
-                dataType : "json",
-                cache   : false,
-                success  : function(result, status){
+                dataType: "json",
+                cache: false,
+                success: function (result, status) {
                     alert("주문이 취소 되었습니다.");
                     $(order).parent().html("<h4>(취소 완료)</h4>");
                 },
-                error : function(jqXHR, status, error){
-                    if(jqXHR.status == '401'){
+                error: function (jqXHR, status, error) {
+                    if (jqXHR.status == '401') {
                         alert('로그인 후 이용해주세요');
-                        location.href='/members/login';
-                    } else{
+                        location.href = '/members/login';
+                    } else {
                         alert(jqXHR.responseText);
                     }
                 }
@@ -57,32 +57,37 @@
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
     <style>
-        .content-mg{
-            margin-left:30%;
-            margin-right:30%;
-            margin-top:2%;
-            margin-bottom:100px;
+        .content-mg {
+            margin-left: 30%;
+            margin-right: 30%;
+            margin-top: 2%;
+            margin-bottom: 100px;
         }
-        .repImgDiv{
-            margin-right:15px;
-            margin-left:15px;
-            height:auto;
+
+        .repImgDiv {
+            margin-right: 15px;
+            margin-left: 15px;
+            height: auto;
         }
-        .repImg{
-            height:100px;
-            width:100px;
+
+        .repImg {
+            height: 100px;
+            width: 100px;
         }
-        .card{
-            width:750px;
-            height:100%;
-            padding:30px;
-            margin-bottom:20px;
+
+        .card {
+            width: 750px;
+            height: 100%;
+            padding: 30px;
+            margin-bottom: 20px;
         }
-        .fs18{
-            font-size:18px
+
+        .fs18 {
+            font-size: 18px
         }
-        .fs24{
-            font-size:24px
+
+        .fs24 {
+            font-size: 24px
         }
     </style>
 </th:block>
@@ -96,10 +101,13 @@
     <div th:each="order : ${orders.getContent()}">
 
         <div class="d-flex mb-3 align-self-center">
-            <h4 th:text="${order.orderDate} + ' 주문'"></h4>
+            <h4 th:text="${order.orderDate}" style="padding-right: 10px"></h4>
+            <h4 th:text="'주문총액: '+${order.totalPrice}+'원'"></h4>
             <div class="ml-3">
                 <th:block th:if="${order.orderStatus == T(com.shop.constant.OrderStatus).ORDER}">
-                    <button type="button" class="btn btn-outline-secondary" th:value="${order.orderId}" onclick="cancelOrder(this)">주문취소</button>
+                    <button type="button" class="btn btn-outline-secondary" th:value="${order.orderId}"
+                            onclick="cancelOrder(this)">주문취소
+                    </button>
                 </th:block>
                 <th:block th:unless="${order.orderStatus == T(com.shop.constant.OrderStatus).ORDER}">
                     <h4>(취소 완료)</h4>
@@ -109,21 +117,25 @@
         <div class="card d-flex">
             <div th:each="orderItem : ${order.orderItemDtoList}" class="d-flex mb-3">
                 <div class="repImgDiv">
-                    <img th:src="${orderItem.imgUrl}" class = "rounded repImg" th:alt="${orderItem.itemNm}">
+                    <a th:href="'/item/' +${orderItem.itemId}" class="text-dark">
+                        <img th:src="${orderItem.imgUrl}" class="rounded repImg" th:alt="${orderItem.itemNm}">
+                    </a>
                 </div>
                 <div class="align-self-center w-75">
-                    <span th:text="${orderItem.itemNm}" class="fs24 font-weight-bold"></span>
-                    <div class="fs18 font-weight-light">
-                        <span th:text="${orderItem.orderPrice} +'원'"></span>
-                        <span th:text="${orderItem.count} +'개'"></span>
-                    </div>
+                    <a th:href="'/item/' +${orderItem.itemId}" class="text-dark">
+                        <span th:text="${orderItem.itemNm}" class="fs24 font-weight-bold"></span>
+                        <div class="fs18 font-weight-light">
+                            <span th:text="${orderItem.orderPrice} +'원'"></span>
+                            <span th:text="${orderItem.count} +'개'"></span>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
 
     </div>
 
-    <div th:with="start=${(orders.number/maxPage)*maxPage + 1}, end=(${(orders.totalPages == 0) ? 1 : (start + (maxPage - 1) < orders.totalPages ? start + (maxPage - 1) : orders.totalPages)})" >
+    <div th:with="start=${(orders.number/maxPage)*maxPage + 1}, end=(${(orders.totalPages == 0) ? 1 : (start + (maxPage - 1) < orders.totalPages ? start + (maxPage - 1) : orders.totalPages)})">
         <ul class="pagination justify-content-center">
 
             <li class="page-item" th:classappend="${orders.number eq 0}?'disabled':''">
@@ -132,7 +144,8 @@
                 </a>
             </li>
 
-            <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${orders.number eq page - 1}?'active':''">
+            <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}"
+                th:classappend="${orders.number eq page - 1}?'active':''">
                 <a th:href="@{'/orders/' + ${page - 1}}" th:inline="text" class="page-link">[[${page}]]</a>
             </li>
 
